--- a/index.html
+++ b/index.html
@@ -220,3 +220,6 @@
       <!-- Workshop 7 -->
       <li class="submission-card">
         <h3>Workshop&nbsp;7 – Project Coming Soon</
+<script src="https://cdn.botpress.cloud/webchat/v2.4/inject.js"></script>
+<script src="https://files.bpcontent.cloud/2025/05/30/15/20250530154709-VWYTW33P.js"></script>
+</body>
