--- a/index.html
+++ b/index.html
@@ -223,3 +223,4 @@
 <script src="https://cdn.botpress.cloud/webchat/v2.4/inject.js"></script>
 <script src="https://files.bpcontent.cloud/2025/05/30/15/20250530154709-VWYTW33P.js"></script>
 </body>
+</html>
