--- a/index.html
+++ b/index.html
@@ -219,7 +219,22 @@
 
       <!-- Workshop 7 -->
       <li class="submission-card">
-        <h3>Workshop&nbsp;7 – Project Coming Soon</
+        <h3>Workshop&nbsp;7 – Project Coming Soon</h3>
+        <p>Content will be added after completion.</p>
+      </li>
+
+      <!-- Workshop 8 -->
+      <li class="submission-card">
+        <h3>Workshop&nbsp;8 – Project Coming Soon</h3>
+        <p>Content will be added after completion.</p>
+      </li>
+    </ul>
+  </section>
+
+  <!-- Footer -->
+  <footer class="footer">
+    <p>Paolo Malerba 2025. Made with a lot of coffee ☕</p>
+  </footer>
 <script src="https://cdn.botpress.cloud/webchat/v2.4/inject.js"></script>
 <script src="https://files.bpcontent.cloud/2025/05/30/15/20250530154709-VWYTW33P.js"></script>
 </body>
